# gmailfilters

./: .gitignore  README.md  requirements.txt  setup.cfg
gmailfilters/: default.py  exceptions.py  gmail.py  main.py  util.py
gmailfilters/cmd/: applyfilters.py  baseclient.py  bulkfilter.py  convertfilters.py  dumpconfig.py  managefilters.py
