[metadata]
name = gmailfilters
summary = GMail filter management tools
description-file =
    README.md
author = Lars Kellogg-Stedman
author-email = lars@redhat.com

[global]
setup-hooks =
    pbr.hooks.setup_hook

[files]
packages =
    gmailfilters

[entry_points]
console_scripts =
    gmf = gmailfilters.main:main

gmf.cmd =
    manage-filters = gmailfilters.cmd.managefilters:ManageFilters
    bulk-filter = gmailfilters.cmd.bulkfilter:BulkFilter
    apply-filters = gmailfilters.cmd.applyfilters:ApplyFilters
    dump-config = gmailfilters.cmd.dumpconfig:DumpConfig

[wheel]
universal = 1

[pbr]
# Treat sphinx warnings as errors during the docs build; this helps us keep
# the documentation clean.
warnerrors = true

[flake8]
ignore = E731
